--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -3,7 +3,11 @@ random_state: 123
 hpo: False
 n_trials: 30
 
-hydra:
-  callbacks:
-    log_callback:
-      _target_: train.LogCallback
+lista: [var1,
+ var2,
+ var3]
+
+# hydra:
+#   callbacks:
+#     log_callback:
+#       _target_: train.LogCallback
